# libdia

./: .gitignore  CMakeLists.txt  README.md  dia-dev.pc.in  dia.pc.in
benchmarks/: CMakeLists.txt  bench.cpp
bindings/: install.sh
bindings/android/: LibDia.kt  README.md  build.sh  proguard-rules.pro
bindings/android/examples/: CallFlowExample.kt  EnrollmentExample.kt
bindings/android/test/: DiaTest.kt
bindings/go/: README.md  cgo.go  dia_benchmark_test.go  dia_test.go  finalizer_test.go  go.mod  pkgconfig_dia.go  pkgconfig_dia_dev.go  run.sh
include/dia/: dia.hpp  dia_c.h
src/: CMakeLists.txt  amf.cpp  amf.hpp  bbs.cpp  bbs.hpp  dh.cpp  dh.hpp  dia_c.cpp  dia_jni.cpp  ecgroup.cpp  ecgroup.hpp  helpers.cpp  helpers.hpp  voprf.cpp  voprf.hpp
src/bindings/: dia_c.cpp  dia_jni.cpp
src/crypto/: amf.cpp  bbs.cpp  bbs.hpp  dh.cpp  dh.hpp  doubleratchet.cpp  doubleratchet.hpp  ecgroup.cpp  pke.cpp  pke.hpp  voprf.cpp  voprf.hpp  wallet.cpp  wallet.hpp
src/protocol/: accesstoken.cpp  accesstoken.hpp  ake.cpp  ake.hpp  benchmark.cpp  benchmark.hpp  callstate.cpp  callstate.hpp  enrollment.cpp  enrollment.hpp  messages.cpp  messages.hpp  oda.cpp  oda.hpp  rua.cpp  rua.hpp
tests/: CMakeLists.txt  test_ake.cpp  test_amf.cpp  test_bbs.cpp  test_c_api.cpp  test_callstate.cpp  test_dh.cpp  test_dia_c.cpp  test_doubleratchet.cpp  test_ecgroup.cpp  test_enrollment.cpp  test_helpers.hpp  test_messages.cpp  test_oda.cpp  test_pke.cpp  test_rua.cpp  test_voprf.cpp
